--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% else %>
   <div class="center jumbotron">
-    <h1></h1>Capistrano was successful.Have a nice day!</h1>
+    <h1>Capistrano was successful.Have a nice day!</h1>
 
     <h2>
       This is the home page for the
